--- a/trunk/mscore/mscore/instrdialog.ui
+++ b/trunk/mscore/mscore/instrdialog.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>InstrumentDialogBase</class>
- <widget class="QDialog" name="InstrumentDialogBase" >
-  <property name="geometry" >
+ <widget class="QDialog" name="InstrumentDialogBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,86 +10,59 @@
     <height>533</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>MuseScore: Create Instruments</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
-   <property name="leftMargin" >
-    <number>8</number>
-   </property>
-   <property name="topMargin" >
-    <number>8</number>
-   </property>
-   <property name="rightMargin" >
-    <number>8</number>
-   </property>
-   <property name="bottomMargin" >
+   <property name="margin">
     <number>8</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin">
       <number>0</number>
      </property>
      <item>
-      <widget class="QTreeWidget" name="instrumentList" >
-       <property name="alternatingRowColors" >
+      <widget class="QTreeWidget" name="instrumentList">
+       <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
-       <property name="uniformRowHeights" >
+       <property name="uniformRowHeights">
         <bool>true</bool>
        </property>
-       <property name="itemsExpandable" >
+       <property name="itemsExpandable">
         <bool>true</bool>
        </property>
-       <property name="columnCount" >
+       <property name="columnCount">
         <number>1</number>
        </property>
        <column>
-        <property name="text" >
+        <property name="text">
          <string>0</string>
         </property>
        </column>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" >
-       <property name="spacing" >
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
        </property>
-       <property name="leftMargin" >
-        <number>0</number>
-       </property>
-       <property name="topMargin" >
-        <number>0</number>
-       </property>
-       <property name="rightMargin" >
-        <number>0</number>
-       </property>
-       <property name="bottomMargin" >
+       <property name="margin">
         <number>0</number>
        </property>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -97,37 +71,37 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="addButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="addButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Add</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="removeButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="removeButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Remove</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -136,37 +110,37 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="upButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="upButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Up</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="downButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="downButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Down</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -175,24 +149,27 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="editButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="editButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Edit</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -201,37 +178,37 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="aboveButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="aboveButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Add Above</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="belowButton" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+        <widget class="QPushButton" name="belowButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>Add Below</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
@@ -242,23 +219,23 @@
       </layout>
      </item>
      <item>
-      <widget class="QTreeWidget" name="partiturList" >
-       <property name="alternatingRowColors" >
+      <widget class="QTreeWidget" name="partiturList">
+       <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
-       <property name="uniformRowHeights" >
+       <property name="uniformRowHeights">
         <bool>true</bool>
        </property>
-       <property name="columnCount" >
+       <property name="columnCount">
         <number>2</number>
        </property>
        <column>
-        <property name="text" >
+        <property name="text">
          <string>0</string>
         </property>
        </column>
        <column>
-        <property name="text" >
+        <property name="text">
          <string>1</string>
         </property>
        </column>
@@ -267,45 +244,36 @@
     </layout>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="widget_2_2" />
+    <widget class="QWidget" name="widget_2_2" native="true"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin">
       <number>0</number>
      </property>
      <item>
-      <widget class="QPushButton" name="loadButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="loadButton">
+       <property name="text">
         <string>Load</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="saveButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="saveButton">
+       <property name="text">
         <string>Save</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>131</width>
          <height>31</height>
@@ -314,15 +282,15 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>OK</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
@@ -330,8 +298,8 @@
     </layout>
    </item>
   </layout>
-  <widget class="QWidget" native="1" name="widget" >
-   <property name="geometry" >
+  <widget class="QWidget" name="widget" native="true">
+   <property name="geometry">
     <rect>
      <x>9</x>
      <y>9</y>
@@ -340,8 +308,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" native="1" name="widget_2" >
-   <property name="geometry" >
+  <widget class="QWidget" name="widget_2" native="true">
+   <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
@@ -350,8 +318,8 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" native="1" name="widget_3" >
-   <property name="geometry" >
+  <widget class="QWidget" name="widget_3" native="true">
+   <property name="geometry">
     <rect>
      <x>374</x>
      <y>10</y>
@@ -369,11 +337,11 @@
    <receiver>InstrumentDialogBase</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>278</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>96</x>
      <y>254</y>
     </hint>
@@ -385,11 +353,11 @@
    <receiver>InstrumentDialogBase</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>369</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
     </hint>
