--- a/trunk/mscore/mscore/chordproperties.ui
+++ b/trunk/mscore/mscore/chordproperties.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>757</width>
-    <height>445</height>
+    <width>609</width>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,6 +40,12 @@
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QGroupBox" name="groupBox_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Chord Properties</string>
           </property>
@@ -149,6 +155,12 @@
         </item>
         <item>
          <widget class="QGroupBox" name="groupBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Note Properties</string>
           </property>
@@ -163,6 +175,12 @@
              </property>
              <item row="3" column="0">
               <widget class="QLabel" name="label_4">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="text">
                 <string>tuning offset</string>
                </property>
@@ -179,6 +197,9 @@
                <property name="suffix">
                 <string extracomment="100 cent = 1 semitone intervall"> cent</string>
                </property>
+               <property name="decimals">
+                <number>2</number>
+               </property>
                <property name="minimum">
                 <double>-200.000000000000000</double>
                </property>
@@ -192,6 +213,12 @@
              </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_7">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="text">
                 <string>velocity type</string>
                </property>
@@ -241,6 +268,12 @@
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_5">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="text">
                 <string>note head positon </string>
                </property>
